--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="d-flex flex-row justify-content-between">
-        <a href="https://shyam044.github.io/matrix-chain-multiplication/" class="btn btn-danger"
+        <a href="https://shyam044.github.io/multistage-graph/" class="btn btn-danger"
             style="height:35px; margin-bottom:20px;">Prev</a>
         <div class="embed-responsive embed-responsive-16by9" style="height:25vh; width:25vw;">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0BgamcCCLgk?rel=0"
@@ -52,3 +52,4 @@
 
 
 </html>
+
