--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0BgamcCCLgk?rel=0"
                 allowfullscreen></iframe>
         </div>
-        <a href="" class="btn btn-primary" style="height:35px;">Next</a>
+        <a href="https://shyam044.github.io/optimal-binary-search-tree/" class="btn btn-primary" style="height:35px;">Next</a>
     </div>
     <script src="script.js"></script>
 </body>
 
 
 </html>
+
 
